created component post list

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,5 @@
-{{ title }}
-<br/>
-{{ name }}
-<br/>
-<!-- one way / two way data binding -->
-<input [ngModel]="name" name="name">
-<input [(ngModel)]="name" name="name">
+<div class="container">
+
+  <app-course-list></app-course-list>
+
+</div>
