--- a/src/app/courses/course-list.component.html
+++ b/src/app/courses/course-list.component.html
@@ -1,1 +1,27 @@
 <h2> Course List </h2>
+
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th>Image</th>
+      <th>Name</th>
+      <th>Price</th>
+      <th>Code</th>
+      <th>Rating</th>
+      <th>Release Date</th>
+      <th>Options</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let course of courses">
+      <td>{{course.imageUrl}}</td>
+      <td>{{course.name}}</td>
+      <td>{{course.price}}</td>
+      <td>{{course.code}}</td>
+      <td>{{course.releaseDate}}</td>
+      <td> - </td>
+      <td> </td>
+    </tr>
+  </tbody>
+
+</table>
